Refactor result collection to use toList()